@@ -23,29 +23,29 @@ public abstract class Wallet {
     }
 
     protected List<Money> generateMoney(final long amount, final String description){
-        var history = new MoneyAudit(UUID.randomUUID(), service, description, OffsetDateTime.now());
-        return Stream.generate(() -> new Money(history)).limit(amount).toList();
+        MoneyAudit history = new MoneyAudit(UUID.randomUUID(), service, description, OffsetDateTime.now());
+        return Stream.generate(() -> new Money(history)).limit(amount).collect(java.util.stream.Collectors.toList());
     }
 
     public long getFunds(){
         return money.size();
     }
 
-    public void addMoney(final List<Money> money, BankService service, final String description) {
-        var history = new MoneyAudit(UUID.randomUUID(), this.service, description, OffsetDateTime.now());
+    public void addMoney(final List<Money> money, final String description) {
+        MoneyAudit history = new MoneyAudit(UUID.randomUUID(), this.service, description, OffsetDateTime.now());
         money.forEach(m -> m.addHistory(history));
         this.money.addAll(money);
     }
 
     public List<Money> reduceMoney(final long amount){
-        List<Money> toRemove = new ArrayList<>();
-        for (int i = 0; i < amount; i++){
-            toRemove.add(this.money.removeFirst());
-        }
-        return toRemove;
-    }
+	List<Money> toRemove = new ArrayList<>();
+	for (int i = 0; i < amount; i++){
+		toRemove.add(this.money.remove(0));
+	}
+	return toRemove;
+}
 
     public List<MoneyAudit> getFinancialTransactions(){
-        return money.stream().flatMap(m -> m.getHistory().stream()).toList();
+        return money.stream().flatMap(m -> m.getHistory().stream()).collect(java.util.stream.Collectors.toList());
     }
 }
