@@ -6,42 +6,44 @@ import dio.model.AccountWallet;
 
 import java.util.List;
 
+import java.util.ArrayList;
+
 import static dio.repository.CommonsRepository.checkFundsForTrasaction;
 
 public class AccountRepository {
 
-    private List<AccountWallet> accounts;
+    private final List<AccountWallet> accounts = new ArrayList<>();
 
     public AccountWallet create(final List<String> pix, final long initialFunds){
-       var pixInUse = accounts.stream().flatMap(a -> a.getPix().stream()).toList();
-        for (var p : pix){
+       java.util.List<String> pixInUse = accounts.stream().flatMap(a -> a.getPix().stream()).collect(java.util.stream.Collectors.toList());
+        for (String p : pix){
             if (pixInUse.contains(p)) {
                 throw new PixInUseException("O pix '" + p + "' já está em uso");
             }
         }
-        var newAccount = new AccountWallet(initialFunds, pix);
+        AccountWallet newAccount = new AccountWallet(initialFunds, pix);
         accounts.add(newAccount);
         return newAccount;
     }
 
     public void deposit(final String pix, final long fundsAmount){
-        var target = findByPix(pix);
+        AccountWallet target = findByPix(pix);
         target.addMoney(fundsAmount, "depósito");
     }
 
     public long withdraw(final String pix, final long amount){
-        var source = findByPix(pix);
+        AccountWallet source = findByPix(pix);
         checkFundsForTrasaction(source, amount);
         source.reduceMoney(amount);
         return amount;
     }
 
     public void transferMoney(final String sourcePix, final String targetPix, final long amount){
-        var source = findByPix(sourcePix);
-        var target = findByPix(targetPix);
+        AccountWallet source = findByPix(sourcePix);
+        AccountWallet target = findByPix(targetPix);
         checkFundsForTrasaction(source, amount);
-        var message = "pix enviado de '" + sourcePix + "' para '" + targetPix + "'";
-        target.addMoney(source.reduceMoney(amount), source.getService(), message);
+        String message = "pix enviado de '" + sourcePix + "' para '" + targetPix + "'";
+        target.addMoney(source.reduceMoney(amount), message);
 
     }
 
