@@ -20,45 +20,48 @@ public class InvestmentRepository {
 
     public Investment create(final long tax, final long initialFunds){
         this.nextId ++;
-        var investment = new Investment(this.nextId, tax, initialFunds);
+        Investment investment = new Investment(this.nextId, tax, initialFunds);
         investments.add(investment);
         return investment;
     }
 
     public InvestmentWallet initInvestment(final AccountWallet account, final long id){
-        var accountInUse =  wallets.stream().map(InvestmentWallet::getAccount).toList();
+        java.util.List<InvestmentWallet> accountInUse =  wallets.stream().map(InvestmentWallet::getAccount).collect(java.util.stream.Collectors.toList());
             if (accountInUse.contains(account)) {
                 throw new PixInUseException("A conta '" + account + "' já possui investimento");
             }
-        var investment = findById(id);
-        checkFundsForTrasaction(account, investment.initialFunds());
-        var wallet = new InvestmentWallet(investment, account, investment.initialFunds());
+        Investment investment = findById(id);
+        checkFundsForTrasaction(account, investment.getInitialFunds());
+        InvestmentWallet wallet = new InvestmentWallet(investment, account, investment.getInitialFunds());
         wallets.add(wallet);
         return wallet;
     }
     public InvestmentWallet deposit(final String pix, final long funds){
-        var wallet = findWalletByAccountPix(pix);
-        wallet.addMoney(wallet.getAccount().reduceMoney(funds), wallet.getService(), "Investimento");
+        InvestmentWallet wallet = findWalletByAccountPix(pix);
+        checkFundsForTrasaction(wallet.getAccount(), funds);
+        wallet.addMoney(wallet.getAccount().reduceMoney(funds), "Investimento");
         return wallet;
     }
 
     public InvestmentWallet withdraw(final String pix, final long funds){
-        var wallet = findWalletByAccountPix(pix);
+        InvestmentWallet wallet = findWalletByAccountPix(pix);
         checkFundsForTrasaction(wallet, funds);
-        wallet.getAccount().addMoney(wallet.reduceMoney(funds), wallet.getService(), "saque de investimento");
+        wallet.getAccount().addMoney(wallet.reduceMoney(funds), "saque de investimento");
         if (wallet.getFunds() == 0) {
             wallets.remove(wallet);
         }
         return wallet;
     }
 
-    public void updateAmount(final long percent){
-        wallets.forEach(w -> w.updateAmount(percent));
+    public void updateAmount(){
+        wallets.forEach(w -> w.updateAmount(w.getInvestment().getTax()));
     }
+
     public Investment findById(final long id){
-        return investments.stream().filter(a -> a.id() == id)
+        return investments.stream().filter(a -> a.getId() == id)
                 .findFirst()
-                .orElseThrow();
+                .orElseThrow(() -> new dio.exception.InvestmentNotFoundException(
+                        "Investimento id " + id + " não encontrado"));
     }
 
     public InvestmentWallet findWalletByAccountPix(final String pix){
